etapa3/y.output
Terminals which are not used

   TOKEN_ERROR


State 24 conflicts: 1 reduce/reduce
State 47 conflicts: 1 shift/reduce
State 52 conflicts: 5 reduce/reduce
State 64 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: globalvars programa
    2         | /* empty */

    3 globalvars: globalvar ';'
    4           | func

    5 globalvar: tipo TK_IDENTIFIER '=' literal
    6          | tipo TK_IDENTIFIER '[' LIT_INTEIRO ']' vetor

    7 vetor: valorvetor
    8      | /* empty */

    9 valorvetor: literal valorvetor
   10           | /* empty */

   11 func: tipo TK_IDENTIFIER '(' parametrosl ')' bloco

   12 parametrosl: parametro
   13            | /* empty */

   14 parametro: tipo TK_IDENTIFIER
   15          | tipo TK_IDENTIFIER parametro

   16 bloco: '{' lcmd '}'

   17 lcmd: cmd
   18     | cmd ';' lcmd

   19 cmd: attcmd
   20    | fluxocmd
   21    | escrevacmd
   22    | retornecmd
   23    | bloco
   24    | /* empty */

   25 attcmd: TK_IDENTIFIER '=' expr
   26       | TK_IDENTIFIER '[' expr ']' '=' expr

   27 fluxocmd: KW_ENTAUM cmd KW_SE '(' expr ')'
   28         | KW_ENTAUM cmd KW_SENAUM cmd KW_SE '(' expr ')'
   29         | cmd KW_ENQUANTO '(' expr ')'

   30 escrevacmd: KW_ESCREVA escrevaparams

   31 escrevaparams: escrevaparam
   32              | escrevaparam escrevaparams
   33              | /* empty */

   34 escrevaparam: expr
   35             | LIT_STRING

   36 params: param
   37       | param params

   38 param: expr
   39      | /* empty */

   40 retornecmd: KW_RETORNE expr

   41 expr: TK_IDENTIFIER
   42     | TK_IDENTIFIER '[' expr ']'
   43     | literal
   44     | expr '+' expr
   45     | expr '-' expr
   46     | expr '*' expr
   47     | expr '/' expr
   48     | expr '<' expr
   49     | expr '>' expr
   50     | expr '|' expr
   51     | expr '&' expr
   52     | '~' expr
   53     | expr OPERATOR_LE expr
   54     | expr OPERATOR_GE expr
   55     | expr OPERATOR_EQ expr
   56     | expr OPERATOR_DIF expr
   57     | '(' expr ')'
   58     | TK_IDENTIFIER '(' params ')'
   59     | KW_ENTRADA

   60 literal: LIT_INTEIRO
   61        | LIT_FLOAT
   62        | LIT_CHAR

   63 tipo: KW_CARA
   64     | KW_INTE
   65     | KW_REAL


Terminals, with rules where they appear

$end (0) 0
'&' (38) 51
'(' (40) 11 27 28 29 57 58
')' (41) 11 27 28 29 57 58
'*' (42) 46
'+' (43) 44
'-' (45) 45
'/' (47) 47
';' (59) 3 18
'<' (60) 48
'=' (61) 5 25 26
'>' (62) 49
'[' (91) 6 26 42
']' (93) 6 26 42
'{' (123) 16
'|' (124) 50
'}' (125) 16
'~' (126) 52
error (256)
KW_CARA (258) 63
KW_INTE (259) 64
KW_REAL (260) 65
KW_SE (261) 27 28
KW_ENTAUM (262) 27 28
KW_SENAUM (263) 28
KW_ENQUANTO (264) 29
KW_ENTRADA (265) 59
KW_ESCREVA (266) 30
KW_RETORNE (267) 40
OPERATOR_LE (268) 53
OPERATOR_GE (269) 54
OPERATOR_EQ (270) 55
OPERATOR_DIF (271) 56
TK_IDENTIFIER (272) 5 6 11 14 15 25 26 41 42 58
LIT_INTEIRO (273) 6 60
LIT_FLOAT (274) 61
LIT_CHAR (275) 62
LIT_STRING (276) 35
TOKEN_ERROR (277)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1 2, on right: 0 1
globalvars (42)
    on left: 3 4, on right: 1
globalvar (43)
    on left: 5 6, on right: 3
vetor (44)
    on left: 7 8, on right: 6
valorvetor (45)
    on left: 9 10, on right: 7 9
func (46)
    on left: 11, on right: 4
parametrosl (47)
    on left: 12 13, on right: 11
parametro (48)
    on left: 14 15, on right: 12 15
bloco (49)
    on left: 16, on right: 11 23
lcmd (50)
    on left: 17 18, on right: 16 18
cmd (51)
    on left: 19 20 21 22 23 24, on right: 17 18 27 28 29
attcmd (52)
    on left: 25 26, on right: 19
fluxocmd (53)
    on left: 27 28 29, on right: 20
escrevacmd (54)
    on left: 30, on right: 21
escrevaparams (55)
    on left: 31 32 33, on right: 30 32
escrevaparam (56)
    on left: 34 35, on right: 31 32
params (57)
    on left: 36 37, on right: 37 58
param (58)
    on left: 38 39, on right: 36 37
retornecmd (59)
    on left: 40, on right: 22
expr (60)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59, on right: 25 26 27 28 29 34 38 40 42 44 45 46 47 48 49 50 51
    52 53 54 55 56 57
literal (61)
    on left: 60 61 62, on right: 5 9 43
tipo (62)
    on left: 63 64 65, on right: 5 6 11 14 15


state 0

    0 $accept: . programa $end

    KW_CARA  shift, and go to state 1
    KW_INTE  shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 2 (programa)

    programa    go to state 4
    globalvars  go to state 5
    globalvar   go to state 6
    func        go to state 7
    tipo        go to state 8


state 1

   63 tipo: KW_CARA .

    $default  reduce using rule 63 (tipo)


state 2

   64 tipo: KW_INTE .

    $default  reduce using rule 64 (tipo)


state 3

   65 tipo: KW_REAL .

    $default  reduce using rule 65 (tipo)


state 4

    0 $accept: programa . $end

    $end  shift, and go to state 9


state 5

    1 programa: globalvars . programa

    KW_CARA  shift, and go to state 1
    KW_INTE  shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 2 (programa)

    programa    go to state 10
    globalvars  go to state 5
    globalvar   go to state 6
    func        go to state 7
    tipo        go to state 8


state 6

    3 globalvars: globalvar . ';'

    ';'  shift, and go to state 11


state 7

    4 globalvars: func .

    $default  reduce using rule 4 (globalvars)


state 8

    5 globalvar: tipo . TK_IDENTIFIER '=' literal
    6          | tipo . TK_IDENTIFIER '[' LIT_INTEIRO ']' vetor
   11 func: tipo . TK_IDENTIFIER '(' parametrosl ')' bloco

    TK_IDENTIFIER  shift, and go to state 12


state 9

    0 $accept: programa $end .

    $default  accept


state 10

    1 programa: globalvars programa .

    $default  reduce using rule 1 (programa)


state 11

    3 globalvars: globalvar ';' .

    $default  reduce using rule 3 (globalvars)


state 12

    5 globalvar: tipo TK_IDENTIFIER . '=' literal
    6          | tipo TK_IDENTIFIER . '[' LIT_INTEIRO ']' vetor
   11 func: tipo TK_IDENTIFIER . '(' parametrosl ')' bloco

    '='  shift, and go to state 13
    '['  shift, and go to state 14
    '('  shift, and go to state 15


state 13

    5 globalvar: tipo TK_IDENTIFIER '=' . literal

    LIT_INTEIRO  shift, and go to state 16
    LIT_FLOAT    shift, and go to state 17
    LIT_CHAR     shift, and go to state 18

    literal  go to state 19


state 14

    6 globalvar: tipo TK_IDENTIFIER '[' . LIT_INTEIRO ']' vetor

    LIT_INTEIRO  shift, and go to state 20


state 15

   11 func: tipo TK_IDENTIFIER '(' . parametrosl ')' bloco

    KW_CARA  shift, and go to state 1
    KW_INTE  shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 13 (parametrosl)

    parametrosl  go to state 21
    parametro    go to state 22
    tipo         go to state 23


state 16

   60 literal: LIT_INTEIRO .

    $default  reduce using rule 60 (literal)


state 17

   61 literal: LIT_FLOAT .

    $default  reduce using rule 61 (literal)


state 18

   62 literal: LIT_CHAR .

    $default  reduce using rule 62 (literal)


state 19

    5 globalvar: tipo TK_IDENTIFIER '=' literal .

    $default  reduce using rule 5 (globalvar)


state 20

    6 globalvar: tipo TK_IDENTIFIER '[' LIT_INTEIRO . ']' vetor

    ']'  shift, and go to state 24


state 21

   11 func: tipo TK_IDENTIFIER '(' parametrosl . ')' bloco

    ')'  shift, and go to state 25


state 22

   12 parametrosl: parametro .

    $default  reduce using rule 12 (parametrosl)


state 23

   14 parametro: tipo . TK_IDENTIFIER
   15          | tipo . TK_IDENTIFIER parametro

    TK_IDENTIFIER  shift, and go to state 26


state 24

    6 globalvar: tipo TK_IDENTIFIER '[' LIT_INTEIRO ']' . vetor

    LIT_INTEIRO  shift, and go to state 16
    LIT_FLOAT    shift, and go to state 17
    LIT_CHAR     shift, and go to state 18

    ';'       reduce using rule 8 (vetor)
    ';'       [reduce using rule 10 (valorvetor)]
    $default  reduce using rule 8 (vetor)

    vetor       go to state 27
    valorvetor  go to state 28
    literal     go to state 29


state 25

   11 func: tipo TK_IDENTIFIER '(' parametrosl ')' . bloco

    '{'  shift, and go to state 30

    bloco  go to state 31


state 26

   14 parametro: tipo TK_IDENTIFIER .
   15          | tipo TK_IDENTIFIER . parametro

    KW_CARA  shift, and go to state 1
    KW_INTE  shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 14 (parametro)

    parametro  go to state 32
    tipo       go to state 23


state 27

    6 globalvar: tipo TK_IDENTIFIER '[' LIT_INTEIRO ']' vetor .

    $default  reduce using rule 6 (globalvar)


state 28

    7 vetor: valorvetor .

    $default  reduce using rule 7 (vetor)


state 29

    9 valorvetor: literal . valorvetor

    LIT_INTEIRO  shift, and go to state 16
    LIT_FLOAT    shift, and go to state 17
    LIT_CHAR     shift, and go to state 18

    $default  reduce using rule 10 (valorvetor)

    valorvetor  go to state 33
    literal     go to state 29


state 30

   16 bloco: '{' . lcmd '}'

    KW_ENTAUM      shift, and go to state 34
    KW_ESCREVA     shift, and go to state 35
    KW_RETORNE     shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    '{'            shift, and go to state 30

    $default  reduce using rule 24 (cmd)

    bloco       go to state 38
    lcmd        go to state 39
    cmd         go to state 40
    attcmd      go to state 41
    fluxocmd    go to state 42
    escrevacmd  go to state 43
    retornecmd  go to state 44


state 31

   11 func: tipo TK_IDENTIFIER '(' parametrosl ')' bloco .

    $default  reduce using rule 11 (func)


state 32

   15 parametro: tipo TK_IDENTIFIER parametro .

    $default  reduce using rule 15 (parametro)


state 33

    9 valorvetor: literal valorvetor .

    $default  reduce using rule 9 (valorvetor)


state 34

   27 fluxocmd: KW_ENTAUM . cmd KW_SE '(' expr ')'
   28         | KW_ENTAUM . cmd KW_SENAUM cmd KW_SE '(' expr ')'

    KW_ENTAUM      shift, and go to state 34
    KW_ESCREVA     shift, and go to state 35
    KW_RETORNE     shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    '{'            shift, and go to state 30

    $default  reduce using rule 24 (cmd)

    bloco       go to state 38
    cmd         go to state 45
    attcmd      go to state 41
    fluxocmd    go to state 42
    escrevacmd  go to state 43
    retornecmd  go to state 44


state 35

   30 escrevacmd: KW_ESCREVA . escrevaparams

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 48
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    $default  reduce using rule 33 (escrevaparams)

    escrevaparams  go to state 51
    escrevaparam   go to state 52
    expr           go to state 53
    literal        go to state 54


state 36

   40 retornecmd: KW_RETORNE . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 55
    literal  go to state 54


state 37

   25 attcmd: TK_IDENTIFIER . '=' expr
   26       | TK_IDENTIFIER . '[' expr ']' '=' expr

    '='  shift, and go to state 56
    '['  shift, and go to state 57


state 38

   23 cmd: bloco .

    $default  reduce using rule 23 (cmd)


state 39

   16 bloco: '{' lcmd . '}'

    '}'  shift, and go to state 58


state 40

   17 lcmd: cmd .
   18     | cmd . ';' lcmd
   29 fluxocmd: cmd . KW_ENQUANTO '(' expr ')'

    KW_ENQUANTO  shift, and go to state 59
    ';'          shift, and go to state 60

    $default  reduce using rule 17 (lcmd)


state 41

   19 cmd: attcmd .

    $default  reduce using rule 19 (cmd)


state 42

   20 cmd: fluxocmd .

    $default  reduce using rule 20 (cmd)


state 43

   21 cmd: escrevacmd .

    $default  reduce using rule 21 (cmd)


state 44

   22 cmd: retornecmd .

    $default  reduce using rule 22 (cmd)


state 45

   27 fluxocmd: KW_ENTAUM cmd . KW_SE '(' expr ')'
   28         | KW_ENTAUM cmd . KW_SENAUM cmd KW_SE '(' expr ')'
   29         | cmd . KW_ENQUANTO '(' expr ')'

    KW_SE        shift, and go to state 61
    KW_SENAUM    shift, and go to state 62
    KW_ENQUANTO  shift, and go to state 59


state 46

   59 expr: KW_ENTRADA .

    $default  reduce using rule 59 (expr)


state 47

   41 expr: TK_IDENTIFIER .
   42     | TK_IDENTIFIER . '[' expr ']'
   58     | TK_IDENTIFIER . '(' params ')'

    '['  shift, and go to state 63
    '('  shift, and go to state 64

    '('       [reduce using rule 41 (expr)]
    $default  reduce using rule 41 (expr)


state 48

   35 escrevaparam: LIT_STRING .

    $default  reduce using rule 35 (escrevaparam)


state 49

   52 expr: '~' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 65
    literal  go to state 54


state 50

   57 expr: '(' . expr ')'

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 66
    literal  go to state 54


state 51

   30 escrevacmd: KW_ESCREVA escrevaparams .

    $default  reduce using rule 30 (escrevacmd)


state 52

   31 escrevaparams: escrevaparam .
   32              | escrevaparam . escrevaparams

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 48
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    KW_SE        reduce using rule 31 (escrevaparams)
    KW_SE        [reduce using rule 33 (escrevaparams)]
    KW_SENAUM    reduce using rule 31 (escrevaparams)
    KW_SENAUM    [reduce using rule 33 (escrevaparams)]
    KW_ENQUANTO  reduce using rule 31 (escrevaparams)
    KW_ENQUANTO  [reduce using rule 33 (escrevaparams)]
    ';'          reduce using rule 31 (escrevaparams)
    ';'          [reduce using rule 33 (escrevaparams)]
    '}'          reduce using rule 31 (escrevaparams)
    '}'          [reduce using rule 33 (escrevaparams)]
    $default     reduce using rule 31 (escrevaparams)

    escrevaparams  go to state 67
    escrevaparam   go to state 52
    expr           go to state 53
    literal        go to state 54


state 53

   34 escrevaparam: expr .
   44 expr: expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . '>' expr
   50     | expr . '|' expr
   51     | expr . '&' expr
   53     | expr . OPERATOR_LE expr
   54     | expr . OPERATOR_GE expr
   55     | expr . OPERATOR_EQ expr
   56     | expr . OPERATOR_DIF expr

    OPERATOR_LE   shift, and go to state 68
    OPERATOR_GE   shift, and go to state 69
    OPERATOR_EQ   shift, and go to state 70
    OPERATOR_DIF  shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79

    $default  reduce using rule 34 (escrevaparam)


state 54

   43 expr: literal .

    $default  reduce using rule 43 (expr)


state 55

   40 retornecmd: KW_RETORNE expr .
   44 expr: expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . '>' expr
   50     | expr . '|' expr
   51     | expr . '&' expr
   53     | expr . OPERATOR_LE expr
   54     | expr . OPERATOR_GE expr
   55     | expr . OPERATOR_EQ expr
   56     | expr . OPERATOR_DIF expr

    OPERATOR_LE   shift, and go to state 68
    OPERATOR_GE   shift, and go to state 69
    OPERATOR_EQ   shift, and go to state 70
    OPERATOR_DIF  shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79

    $default  reduce using rule 40 (retornecmd)


state 56

   25 attcmd: TK_IDENTIFIER '=' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 80
    literal  go to state 54


state 57

   26 attcmd: TK_IDENTIFIER '[' . expr ']' '=' expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 81
    literal  go to state 54


state 58

   16 bloco: '{' lcmd '}' .

    $default  reduce using rule 16 (bloco)


state 59

   29 fluxocmd: cmd KW_ENQUANTO . '(' expr ')'

    '('  shift, and go to state 82


state 60

   18 lcmd: cmd ';' . lcmd

    KW_ENTAUM      shift, and go to state 34
    KW_ESCREVA     shift, and go to state 35
    KW_RETORNE     shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    '{'            shift, and go to state 30

    $default  reduce using rule 24 (cmd)

    bloco       go to state 38
    lcmd        go to state 83
    cmd         go to state 40
    attcmd      go to state 41
    fluxocmd    go to state 42
    escrevacmd  go to state 43
    retornecmd  go to state 44


state 61

   27 fluxocmd: KW_ENTAUM cmd KW_SE . '(' expr ')'

    '('  shift, and go to state 84


state 62

   28 fluxocmd: KW_ENTAUM cmd KW_SENAUM . cmd KW_SE '(' expr ')'

    KW_ENTAUM      shift, and go to state 34
    KW_ESCREVA     shift, and go to state 35
    KW_RETORNE     shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    '{'            shift, and go to state 30

    $default  reduce using rule 24 (cmd)

    bloco       go to state 38
    cmd         go to state 85
    attcmd      go to state 41
    fluxocmd    go to state 42
    escrevacmd  go to state 43
    retornecmd  go to state 44


state 63

   42 expr: TK_IDENTIFIER '[' . expr ']'

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 86
    literal  go to state 54


state 64

   58 expr: TK_IDENTIFIER '(' . params ')'

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    KW_ENTRADA     [reduce using rule 39 (param)]
    TK_IDENTIFIER  [reduce using rule 39 (param)]
    LIT_INTEIRO    [reduce using rule 39 (param)]
    LIT_FLOAT      [reduce using rule 39 (param)]
    LIT_CHAR       [reduce using rule 39 (param)]
    '~'            [reduce using rule 39 (param)]
    '('            [reduce using rule 39 (param)]
    $default       reduce using rule 39 (param)

    params   go to state 87
    param    go to state 88
    expr     go to state 89
    literal  go to state 54


state 65

   44 expr: expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . '>' expr
   50     | expr . '|' expr
   51     | expr . '&' expr
   52     | '~' expr .
   53     | expr . OPERATOR_LE expr
   54     | expr . OPERATOR_GE expr
   55     | expr . OPERATOR_EQ expr
   56     | expr . OPERATOR_DIF expr

    OPERATOR_LE   shift, and go to state 68
    OPERATOR_GE   shift, and go to state 69
    OPERATOR_EQ   shift, and go to state 70
    OPERATOR_DIF  shift, and go to state 71
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79

    $default  reduce using rule 52 (expr)


state 66

   44 expr: expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . '>' expr
   50     | expr . '|' expr
   51     | expr . '&' expr
   53     | expr . OPERATOR_LE expr
   54     | expr . OPERATOR_GE expr
   55     | expr . OPERATOR_EQ expr
   56     | expr . OPERATOR_DIF expr
   57     | '(' expr . ')'

    OPERATOR_LE   shift, and go to state 68
    OPERATOR_GE   shift, and go to state 69
    OPERATOR_EQ   shift, and go to state 70
    OPERATOR_DIF  shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    ')'           shift, and go to state 90


state 67

   32 escrevaparams: escrevaparam escrevaparams .

    $default  reduce using rule 32 (escrevaparams)


state 68

   53 expr: expr OPERATOR_LE . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 91
    literal  go to state 54


state 69

   54 expr: expr OPERATOR_GE . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 92
    literal  go to state 54


state 70

   55 expr: expr OPERATOR_EQ . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 93
    literal  go to state 54


state 71

   56 expr: expr OPERATOR_DIF . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 94
    literal  go to state 54


state 72

   51 expr: expr '&' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 95
    literal  go to state 54


state 73

   50 expr: expr '|' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 96
    literal  go to state 54


state 74

   48 expr: expr '<' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 97
    literal  go to state 54


state 75

   49 expr: expr '>' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 98
    literal  go to state 54


state 76

   44 expr: expr '+' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 99
    literal  go to state 54


state 77

   45 expr: expr '-' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 100
    literal  go to state 54


state 78

   46 expr: expr '*' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 101
    literal  go to state 54


state 79

   47 expr: expr '/' . expr

    KW_ENTRADA     shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    '~'            shift, and go to state 49
    '('            shift, and go to state 50

    expr     go to state 102
    literal  go to state 54


state 80

   25 attcmd: TK_IDENTIFIER '=' expr .
   44 expr: expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . '>' expr
   50     | expr . '|' expr
   51     | expr . '&' expr
   53     | expr . OPERATOR_LE expr
   54     | expr . OPERATOR_GE expr
   55     | expr . OPERATOR_EQ expr
   56     | expr . OPERATOR_DIF expr
